@@ -9,10 +9,7 @@
 	<url>https://github.com/uchicom/plate/wiki</url>
 	<properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spotless.version>2.20.1</spotless.version>
-		<java.version>11</java.version>
-		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<spotless.version>2.25.0</spotless.version>
 	</properties>
 	<licenses>
 		<license>
@@ -46,14 +43,42 @@
 	</distributionManagement>
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.9.0</version>
-				<configuration>
-					<source>11</source>
-					<target>11</target>
-				</configuration>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <encoding>UTF-8</encoding>
+			          <fork>true</fork>
+			          <compilerArgs>
+			            <arg>-XDcompilePolicy=simple</arg>
+			            <arg>-Xplugin:ErrorProne</arg>
+			            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+			            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+			            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+			            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+			            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+			            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+			            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+			            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+			          </compilerArgs>
+			          <annotationProcessorPaths>
+			            <path>
+			              <groupId>com.google.errorprone</groupId>
+			              <artifactId>error_prone_core</artifactId>
+			              <version>2.9.0</version>
+			            </path>
+				         <path>
+				           <groupId>com.google.dagger</groupId>
+				           <artifactId>dagger-compiler</artifactId>
+				           <version>2.40.5</version>
+				         </path>
+			          </annotationProcessorPaths>
+                </configuration>
 			</plugin>
 			<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -79,7 +104,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
